WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36943
[V8] Quick fix for failure in SerializedScriptValue
https://bugs.webkit.org/show_bug.cgi?id=36943
Summary
[V8] Quick fix for failure in SerializedScriptValue
Vitaly Repeshko
Reported
2010-04-01 01:05:13 PDT
[V8] Quick fix for failure in SerializedScriptValue
Attachments
patch
(1.18 KB, patch)
2010-04-01 01:08 PDT
,
Vitaly Repeshko
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vitaly Repeshko
Comment 1
2010-04-01 01:08:35 PDT
Created
attachment 52273
[details]
patch
Darin Fisher (:fishd, Google)
Comment 2
2010-04-01 01:16:31 PDT
Landed as
http://trac.webkit.org/changeset/56903
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug