2010-04-01  Vitaly Repeshko  <vitalyr@chromium.org>

Reviewed by Darin Fisher.

        [V8] Quick fix for failure in SerializedScriptValue
        https://bugs.webkit.org/show_bug.cgi?id=36943

        This allows the web worker layout tests to pass again.

        * bindings/v8/SerializedScriptValue.h:
        (WebCore::SerializedScriptValue::deserializeAndSetProperty):



Canonical link: https://commits.webkit.org/48196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56903 268f45cc-cd09-0410-ab3c-d52691b4dbfc